sort.pancake.BubblePancake.scala.error
Erreur de compilation :
BubblePancake:22: error: ':' expected but ',' found.
def plusGrand(i,j) : Boolean = {
               ^BubblePancake:32: error: identifier expected but '}' found.
}
^